[package]
name = "safa-buffer-pool"
version = "0.1.0"
authors = ["Alexandre Fromantin <oalexandrefromantin@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/Alexandre-Fromantin/safa-buffer-pool"
readme = "README.md"
keywords = ["rust", "pool", "buffer"]
categories = ["utils"]

[dependencies]
tokio = { version = "1.45.1", features = ["sync", "rt"] }