[package]
name = "safa-buffer-pool"
version = "0.1.0"
authors = ["Alexandre Fromantin <oalexandrefromantin@gmail.com>"]
edition = "2024"
description = "A tool, to create and manage buffer pools quickly and easily in Rust"
license = "MIT"
repository = "https://github.com/Alexandre-Fromantin/safa-buffer-pool"
readme = "README.md"
keywords = ["rust", "pool", "buffer"]
categories = ["caching"]

[dependencies]
tokio = { version = "1.45.1", features = ["sync", "rt"] }