[package]
name = "safa-buffer-pool"
version = "1.0.0"
authors = ["Alexandre Fromantin <oalexandrefromantin@gmail.com>"]
edition = "2024"
description = "Safa-buffer-pool is a quick and simple tool to create buffer pools in a mono or multi thread context."
license = "MIT"
repository = "https://github.com/Alexandre-Fromantin/safa-buffer-pool"
readme = "README.md"
keywords = ["rust", "pool", "buffer"]
categories = ["caching"]

[dependencies]
tokio = { version = "1.45.1", features = ["sync", "rt", "macros", "time"] }
